--- a/TrabajoPractico5.csproj
+++ b/TrabajoPractico5.csproj
@@ -95,7 +95,9 @@
     <Compile Include="ListadoSucursales.aspx.designer.cs">
       <DependentUpon>ListadoSucursales.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Negocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
