--- a/TrabajoPractico5.csproj
+++ b/TrabajoPractico5.csproj
@@ -92,11 +92,14 @@
     </Compile>
     <Compile Include="ListadoSucursales.aspx.cs">
       <DependentUpon>ListadoSucursales.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="ListadoSucursales.aspx.designer.cs">
       <DependentUpon>ListadoSucursales.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Provincia.cs" />
+    <Compile Include="Sucursal.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
